<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RestoPesto</string>
    <string name="orderTextOnTop">Please fill out the folloing form</string>
    <string name="orderEditTextName">Name</string>
    <string name="orderEditTextPhoneNumber">Phone number</string>
    <string name="orderConfirmButton">CONFIRM</string>
    <string name="orderButton">ORDER</string>
    <string name="orderReview">OrderReview</string>
    <string name="orderSits">Number of sits</string>
    <string name="orderPickTimeBtn">Pick Time</string>
    <string name="orderPickDateBtn">Pick Date</string>
    <string name="orderTime">Order time:</string>
    <string name="orderDate">Order date:</string>
    <string name="minus">minus</string>
    <string name="plus">plus</string>
    <string name="info">About</string>
    <string name="order">Order</string>
    <string name="maps">Location</string>
    <string name="table">View reservation</string>
    <string name="des">Description</string>
    <string name="con">Contacts</string>
    <string name="cellnr">Cell Number:</string>
    <string name="check_internet">Check Internet connection</string>
    <string name="close">Close</string>
    <string name="ingradients">Ingradients</string>
    <string name="priceandtime">Price and delivery time</string>
    <string name="email">EMail:</string>
    <string name="seats">Max seats:</string>
    <string name="pricett">Price:</string>
    <string name="delivery">Delivery time:</string>

    <item type="id" name="TAG_VIEW"/>

</resources>
