<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"

        >
    <TextView
            android:id="@+id/orderTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/orderTextOnTop"
            android:paddingBottom="10dp"
            />

    <EditText
            android:id="@+id/orderEditTextName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/orderEditTextName"
            android:inputType="text"
            />
    <EditText
            android:id="@+id/orderEditTextPhoneNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/orderEditTextPhoneNumber"
            android:inputType="phone"
            />
    <LinearLayout
            android:id="@+id/sitsSelectionLayot"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5"

            >
        <TextView
                android:id="@+id/orderTextViewSits"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/orderSits"
                />
        <EditText
                android:id="@+id/orderEditTextSits"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/orderEditTextPhoneNumber"
                android:inputType="numberDecimal"
                android:layout_weight="1"
                />
    </LinearLayout>
    <LinearLayout
            android:id="@+id/dateAndTimeLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >
        <Button
                android:id="@+id/btnDatePicker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Pick date"
        />
        <Button
                android:id="@+id/btnTimePirkcer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Pick time"
                />


    </LinearLayout>
    <LinearLayout
            android:id="@+id/orderConfirmationLayout"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        <TextView
                android:id="@+id/orderReviewTV"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/orderReview"
                android:gravity="center_horizontal"
                />
    </LinearLayout>
    <Button
            android:id="@+id/orderConfirmButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/orderConfirmButton"
            android:layout_gravity="bottom"
            />







</LinearLayout>

